Fixed center content alignment

--- a/_sass/core/global.scss
+++ b/_sass/core/global.scss
@@ -280,6 +280,10 @@ form {
   }
 }
 
+.text-center {
+  text-align: center !important;
+}
+
 .videoblock {
   position: relative;
   padding-bottom: 56.25%;
